--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@ RadSideDrawer is a UI component part of the Progress NativeScript UI set of comp
 Learn more about the RadSideDrawer UI component and how it can be customized in this documentation article:
 http://docs.telerik.com/devtools/nativescript-ui/Controls/NativeScript/SideDrawer/getting-started
 -->
-<RadSideDrawer [drawerTransition]="sideDrawerTransition">
+<RadSideDrawer drawerTransition="FadeTransition">
     <GridLayout tkDrawerContent rows="190, *" class="sidedrawer sidedrawer-left"
         [ngClass]="[themeApplied ? conference.confTheme.cssClassName : '']">
         <StackLayout row="0" class="sidedrawer-header" style="margin-top: 10;">
