loader placement fixed

--- a/src/_app-common.scss
+++ b/src/_app-common.scss
@@ -6,6 +6,11 @@
 
 $default-font-family: "Roboto";
 
+.activity-indicator {
+  margin-top: 40%;
+  margin-bottom: 60%;
+}
+
 .page-content {
   .content-padding {
     padding: 0 20;
