--- a/src/app/containers/schedule/components/event-item/event-item.component.html
+++ b/src/app/containers/schedule/components/event-item/event-item.component.html
@@ -1,4 +1,4 @@
-<StackLayout width="100%" style="padding: 3 8;" >
+<StackLayout width="100%" style="padding: 3 8;" ripple (tap)="showModal()">
   <GridLayout
     columns="75, *, 75"
     rows="5, auto, 45, 10"
@@ -76,7 +76,6 @@
           text="&#xf007;"
           verticalAlignment="center"
           textAlignment="center"
-          (tap)="showModal()"
           style="color: #80868B; font-size: 16;margin-right: 10;"
         ></label>
         <label
@@ -89,7 +88,6 @@
           class="scheduleItemName"
           verticalAlignment="center"
           textAlignment="left"
-          ripple (tap)="showModal()"
         ></label>
       </GridLayout>
     </StackLayout>
